--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.35.0
 pandas==2.2.2
-scikit-learn==1.2.2
+numpy==1.24.3
 matplotlib==3.7.1
 seaborn==0.12.2
-numpy==1.24.3
+scikit-learn==1.2.2
+imblearn==0.10.1
